# os-apply-config

./: .coveragerc  .gitreview  .stestr.conf  MANIFEST.in  README.md  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
os_apply_config/: apply_config.py  collect_config.py  oac_file.py  os_apply_config.py  renderers.py  value_types.py  version.py
os_apply_config/tests/: test_apply_config.py  test_collect_config.py  test_json_renderer.py  test_oac_file.py  test_value_type.py
os_apply_config/tests/chown_templates/: group.gid  group.gid.oac  group.name  group.name.oac  owner.name  owner.name.oac  owner.uid  owner.uid.oac
os_apply_config/tests/templates/etc/control/: allow_empty.oac  mode  mode.oac
os_apply_config/tests/templates/etc/glance/: script.conf
zuul.d/: layout.yaml
