[metadata]
name = os-apply-config
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Config files from cloud metadata
description-file = 
	README.rst
home-page = http://git.openstack.org/cgit/openstack/os-apply-config
classifier = 
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python

[files]
packages = 
	os_apply_config

[entry_points]
console_scripts =
	os-config-applier = os_apply_config.apply_config:main
	os-apply-config = os_apply_config.apply_config:main

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
