[metadata]
name = os-apply-config
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Config files from cloud metadata
description_file =
	README.rst
home_page = https://opendev.org/openstack/os-apply-config
python_requires = >=3.8
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[files]
packages =
	os_apply_config

[entry_points]
console_scripts =
	os-config-applier = os_apply_config.apply_config:main
	os-apply-config = os_apply_config.apply_config:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
